# cognizant-hackathon

./: .env.example  .gitignore  COUNCIL_V2_CHANGES.md  LICENSE  README.md  agents.md  day1&2.md  docker-compose.yml  env  features.md  mcp.md  rag.md  start-all.bat  test.html  test_nvidia.py  testing.md
backend/: __init__.py  auth_keys.py  brand_agent_enhancement.py  config.py  data_gatherer.py  debate_engine.py  fallback_engine.py  graph.py  graph_utils.py  main.py  predictions_engine.py  pyproject.toml  state.py
backend/agents/: analyst_agent.py  brand_agent.py  creative_agent.py  critic_agent.py  dynamic_routing.py  finance_agent.py  legal_agent.py  logistics_agent.py  market_agent.py  moderator.py  optimizer_agent.py  risk_agent.py  supervisor.py  supply_agent.py
backend/db/: neo4j_client.py  neon.py  redis_client.py
backend/llm/: providers.py  router.py
backend/mcp/: __init__.py  agent_mcp_integration.py  audit.py  cache.py  langchain_integration.py  mcp_servers.py  mcp_toolkit.py  registry.py  sandbox.py  secure_mcp.py  server.py
backend/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py  rate_limiter.py  security.py
backend/observability/: __init__.py  langsmith_config.py
backend/rag/: __init__.py  agent_rag_integration.py  agentic_rag.py  api.py  base_rag.py  chunker.py  context.py  embedder.py  generator.py  graph_rag.py  hybrid_rag.py  loader.py  rag_config.py  retriever.py  vectorstore.py
backend/routes/: council.py  council_v2.py  health.py  ingest.py  market.py  mcp_manifest.py  models.py  observability.py  optimize.py  risk.py  (+1 more)
(+162 files in other folders)
