[project]
name = "supplychaingpt-backend"
version = "1.0.0"
description = "SupplyChainGPT Council of Debate AI Agents — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "redis[hiredis]>=5.0",
    "neo4j>=5.25",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-groq>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-cohere>=0.3",
    "langsmith>=0.2",
    "orjson>=3.10",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "firecrawl-py>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "locust>=2.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
